WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
265980
[IPC] GPUProcessConnection::messageReceiverMap() isn't thread-safe
https://bugs.webkit.org/show_bug.cgi?id=265980
Summary
[IPC] GPUProcessConnection::messageReceiverMap() isn't thread-safe
Jean-Yves Avenard [:jya]
Reported
2023-12-06 20:42:10 PST
GPUProcessConnection::messageReceiverMap() isn't thread-safe, you can't add new MessageReceiver concurrently It needs to be protected by a lock/mutex and the MessageReceiverMap should no longer be accessed directly.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-12-06 20:42:30 PST
<
rdar://problem/119291532
>
Jean-Yves Avenard [:jya]
Comment 2
2023-12-06 21:26:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21425
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug