[IPC] GPUProcessConnection::messageReceiverMap() isn't thread-safe https://bugs.webkit.org/show_bug.cgi?id=265980 rdar://119291532

Reviewed by NOBODY (OOPS!).

Test run to check that the map is only ever accessed on the main thread. not to be landed.

* Source/WebKit/WebProcess/GPU/GPUProcessConnection.h:
(WebKit::GPUProcessConnection::messageReceiverMap):